--- a/frameworks/g-cloud-9/questions/services/ongoingSupportDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupportDescription.yml
@@ -1,11 +1,9 @@
-name: Web chat accessibility testing
-question: Describe any web chat testing that you’ve done with assistive technology users.
+name: How the support service works
+question: How do you support cloud software or hosting services?
 
 depends:
   - "on": lot
     being:
-      - cloud-hosting
-      - cloud-support
       - cloud-support
 
 type: textbox_large
@@ -17,4 +15,3 @@ validations:
     message: Your description must be no more than 50 words.
   - name: under_character_limit
     message: Your description must be no more than 500 characters.
-
