--- a/frameworks/g-cloud-9/questions/services/planningServiceCompatability.yml
+++ b/frameworks/g-cloud-9/questions/services/planningServiceCompatability.yml
@@ -1,11 +1,9 @@
-name: Phone support
-question: Do you provide phone support?
+name: Planning for specific services
+question: Is your planning service for specific hosting or software services?
 
 depends:
   - "on": lot
     being:
-      - cloud-hosting
-      - cloud-software
       - cloud-support
 
 type: boolean
