--- a/frameworks/g-cloud-9/questions/services/trainingDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/trainingDescription.yml
@@ -1,11 +1,9 @@
-name: Web chat accessibility testing
-question: Describe any web chat testing that you’ve done with assistive technology users.
+name: How the training service works
+question: Describe the training you provide.
 
 depends:
   - "on": lot
     being:
-      - cloud-hosting
-      - cloud-support
       - cloud-support
 
 type: textbox_large
