--- a/schemas/manifests.json
+++ b/schemas/manifests.json
@@ -29,6 +29,10 @@
       "description": {
         "type": "string"
       },
+      "slug": {
+        "type": "string",
+        "patterm": "[a-z0-9]([a-z0-9-]*[a-z0-9])?"
+      },
       "step": {
         "type": "integer"
       }
