Use new followup property format in existing questions

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/yesNo.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/yesNo.yml
@@ -1,6 +1,9 @@
 question: '{{ item }}'
 type: boolean
-followup: evidence
+followup:
+  evidence:
+    - true
+
 validations:
   - name: answer_required
     message: 'You must answer ‘yes’ or ‘no’ to this question.'
