--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -3,13 +3,14 @@
   slug: providing-suitable-services
   editable: True
   prefill: False
-  description: >
+  description: |
     You must make this declaration to apply to G-Cloud&nbsp;9. You can come back and change your answers at any time before
-    5pm BST, 11 April 2017. [might want to remove]
+    5pm BST, 11 April 2017. **[might want to remove]**
 
     You must answer these questions to confirm that your services are suitable for G-Cloud&nbsp;9.
 
-    You must be able to truthfully answer ‘yes’ to every question for your application to be considered eligible. The Crown Commercial Service may ask for proof after you’ve submitted your application.
+    You must be able to truthfully answer ‘yes’ to every question for your application to be considered eligible.
+    The Crown Commercial Service may ask for proof after you’ve submitted your application.
 
     If you can’t answer ‘yes’ to every question in this section, it’s very unlikely that your application will be accepted. 
 
@@ -24,7 +25,7 @@
   slug: what-it-means-to-be-on-g-cloud-9
   editable: True
   prefill: False
-  description: >
+  description: |
     If you make an application to G-Cloud&nbsp;9, you’re agreeing to the terms and conditions in the legal documentation.
 
     You must be able to truthfully answer ‘yes’ to every question on this page for your application to be considered eligible.
@@ -43,16 +44,16 @@
   slug: grounds-for-mandatory-exclusion
   editable: True
   prefill: True
-  description: >
-    You must be able to truthfully answer ‘no’ to every question under ‘Grounds for mandatory exclusion’ for your application to be
-    considered eligible. If you can’t answer ‘no’ to every question in this
-    section, it’s very unlikely that your application will be accepted.
-    In questions [[conspiracy]] to [[organisedCrime]], ‘anyone who represents, supervises or has control in your organisation
-    or a partner or parent organisation’ includes members of your group of economic 
-    operators, their proposed subcontractors, and any directors, partners, or 
-    any other person who has powers of representation, decision or control.
-    Check that your organisation complies with [Regulation 57(1) of the Public
-    Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
+  description: |
+    You must be able to truthfully answer ‘no’ to every question under ‘Grounds for mandatory exclusion’ for your 
+    application to be considered eligible. If you can’t answer ‘no’ to every question in this section, it’s very 
+    unlikely that your application will be accepted.
+
+    In questions [[conspiracy]] to [[organisedCrime]], ‘anyone who represents, supervises or has control in your 
+    organisation or a partner or parent organisation’ includes members of your group of economic operators, their
+    proposed subcontractors, and any directors, partners, or any other person who has powers of representation, 
+    decision or control. Check that your organisation complies with [Regulation 57(1) of the Public Contracts
+    Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
   questions:
     - conspiracy
     - corruptionBribery
@@ -65,14 +66,16 @@
   slug: grounds-for-discretionary-exclusion
   editable: True
   prefill: True
-  description: >
+  description: |
     You must be able to truthfully answer ‘no’ to every question under ‘Grounds for discretionary exclusion’
     for your bid to be considered eligible. If you can’t answer ‘no’, your bid may not be accepted. If
     you do answer ‘yes’, you must provide full details of any subsequent event or remedial action that
     you think the Crown Commercial Service (CCS) should take into consideration. CCS will use the information
     you provide to consider whether or not you will be able to proceed any further with this procurement.
+
     In questions [[taxEvasion]] to [[misleadingInformation]], ‘a partner organisation’ includes members
     of your group of economic operators or their proposed subcontractors.
+    
     CCS can also exclude you if you are guilty of serious
     misrepresentation in providing any information referred to within
     regulations
@@ -107,7 +110,7 @@
   slug: working-with-government
   editable: True
   prefill: True
-  description: >
+  description: |
     You must be able to truthfully answer ‘yes’ to every question under ‘Working with government’ for your bid to be
     considered eligible.
     
@@ -123,7 +126,7 @@
   slug: how-you-apply
   editable: True
   prefill: False
-  description: >
+  description: |
     You must be able to truthfully answer ‘yes’ to every question on this page for your application to be considered eligible.
 
     If you can’t answer ‘yes’ to every question on this page, it’s very unlikely that your application will be accepted.
@@ -137,8 +140,9 @@
   slug: application-accuracy
   editable: True
   prefill: False
-  description: >
-    You must confirm the accuracy of the information in this declaration and in your service descriptions. We might ask for proof after you’ve submitted your application.
+  description: |
+    You must confirm the accuracy of the information in this declaration and in your service descriptions. We might 
+    ask for proof after you’ve submitted your application.
 
   questions:
     - accurateInformation
@@ -150,10 +154,11 @@
   slug: about-your-organisation
   editable: True
   prefill: True
-  description: >
+  description: |
     The Crown Commercial Service will use the information you provide on this page to process your G-Cloud&nbsp;9 application. 
 
-    For a group of economic operators, this will be the name of the lead organisation (or the separate entity such as a special purpose vehicle if you have already created one).
+    For a group of economic operators, this will be the name of the lead organisation (or the separate entity such as a 
+    special purpose vehicle if you have already created one).
     If you’re submitting a response on behalf of another organisation, use their company name and details, not yours.
   questions:
     - nameOfOrganisation
@@ -165,8 +170,9 @@
   slug: organisation-registration
   editable: True
   prefill: True
-  description: >
-    The Crown Commercial Service will use the information you provide on this page to process your G-Cloud&nbsp;9 application. If your application is successful, it will carry out checks on your company.
+  description: |
+    The Crown Commercial Service will use the information you provide on this page to process your G-Cloud&nbsp;9 application.
+    If your application is successful, it will carry out checks on your company.
   questions:
     - firstRegistered
     - currentRegisteredCountry
@@ -184,7 +190,7 @@
   slug: how-youll-deliver-your-services
   editable: True
   prefill: True   
-  description: >
+  description: |
     The Crown Commercial Service will use this information to manage your participation in G-Cloud&nbsp;9. 
   questions:
     - subcontracting
@@ -194,7 +200,7 @@
   slug: organisations-size
   editable: True
   prefill: True
-  description: >
+  description: |
     The government [aims to spend £1 in every £3 with small-to-medium enterprises (SMEs)s](https://www.gov.uk/government/news/big-opportunities-for-small-firms-government-set-to-spend-1-in-every-3-with-small-businesses) by 2020.
     
     The Crown Commercial Service will use the information you provide about the size of your company to report overall statistics about the successful suppliers on G-Cloud&nbsp;9.  
@@ -206,7 +212,7 @@
   slug: trading-status
   editable: True
   prefill: True
-  description: >
+  description: |
     The Crown Commercial Service will use the information to understand the different types of suppliers providing G-Cloud&nbsp;9 services.
   questions:
     - tradingStatus
@@ -217,7 +223,7 @@
   slug: contact-details
   editable: True
   prefill: True  
-  description: >
+  description: |
      The Crown Commercial Service will use the primary contact information to contact your organisation if it has any questions about your application.  
   questions:
     - primaryContact
