--- a/frameworks/g-cloud-9/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-9/messages/homepage-sidebar.yml
@@ -1,16 +1,16 @@
 coming:
-  heading: 'G-Cloud&nbsp;9 coming soon'
+  heading: 'G&#x2011;Cloud&nbsp;9 is coming soon'
   messages:
     - 'Provide cloud hosting, software and support.'
-    - 'You need an account to receive notifications about when you can apply.'
+    - 'You need a supplier account so we can email you as soon as G&#x2011;Cloud&nbsp;9 opens for applications.'
 
 open:
-  heading: 'G-Cloud&nbsp;9 is open for applications'
+  heading: 'G&#x2011;Cloud&nbsp;9 is open for applications'
   messages:
     - 'You need an account to apply.'
     - 'The application deadline is 5pm&nbsp;GMT, 11 April 2017.'
 
 pending:
-  heading: 'G-Cloud&nbsp;9 is closed for applications'
+  heading: 'G&#x2011;Cloud&nbsp;9 is closed for applications'
   messages:
     - 'Applications are being reviewed.'
