--- a/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
+++ b/frameworks/g-cloud-9/questions/services/freeVersionTrialOption.yml
@@ -9,6 +9,12 @@ depends:
 
 type: boolean
 
+followup:
+  freeVersionDescription:
+    - True
+  freeVersionLink:
+    - True
+
 validations:
   - name: answer_required
     message: You need to answer this question.
