--- a/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
+++ b/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
@@ -13,6 +13,10 @@ options:
   - label: ISO/IEC 27001
   - label: Other
 
+followup:
+  securityGovernanceStandardsOther:
+    - Other
+
 validations:
   - name: answer_required
     message: You need to answer this question.
