--- a/frameworks/g-cloud-9/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-9/messages/homepage-sidebar.yml
@@ -2,7 +2,7 @@ coming:
   heading: 'G&#x2011;Cloud&nbsp;9 is coming soon'
   messages:
     - 'Provide cloud hosting, software and support.'
-    - 'You need a supplier account so we can email you as soon as G&#x2011;Cloud&nbsp;9 opens for applications.'
+    - 'You need a supplier account so we can email you as soon as G&#x2011;Cloud opens for applications.'
 
 open:
   heading: 'G&#x2011;Cloud&nbsp;9 is open for applications'
