Fix typos in some G9 questions
Running aspell on YAML file contents and checking the question IDs
split by word using vim spell checker.

There are a lot of false positives caused by question IDs appearing
in the YAML files and aspell dictionaries missing a lot of terms to
begin with so I had to go through the list of misspelling manually,
which means I've probably missed some things.

--- a/frameworks/g-cloud-9/questions/services/commandLineOS.yml
+++ b/frameworks/g-cloud-9/questions/services/commandLineOS.yml
@@ -1,4 +1,4 @@
-name: Command line interface compatability
+name: Command line interface compatibility
 question: Which operating systems does your command line interface work with?
 
 depends:
