--- a/frameworks/g-cloud-9/questions/services/trainingServiceSpecificList.yml
+++ b/frameworks/g-cloud-9/questions/services/trainingServiceSpecificList.yml
@@ -1,4 +1,4 @@
-name: Services the training servics works with
+name: Services the training service works with
 question: Which cloud hosting or software services is your training for?
 
 depends:
