--- a/frameworks/g-cloud-9/questions/services/virtualisationSeparation.yml
+++ b/frameworks/g-cloud-9/questions/services/virtualisationSeparation.yml
@@ -1,5 +1,5 @@
 name: How shared infrastructure is kept separate
-question: Describe how different organisations sharing the same infrastrcture are kept apart.
+question: Describe how different organisations sharing the same infrastructure are kept apart.
 hint: 50-word limit
 
 depends:
