--- a/frameworks/g-cloud-9/questions/declaration/corruptionBribery.yml
+++ b/frameworks/g-cloud-9/questions/declaration/corruptionBribery.yml
@@ -7,5 +7,7 @@ question: >
     - bribery within the meaning of sections 1, 2 or 6 of the Bribery Act 2010
     - section 113 of the Representation of the People Act 1983
     - any other offence within the meaning of article 57(1) of the Public Contracts Directive as defined by the law of any jurisdiction outside England and Wales and Northern Ireland
+    - any other offence within the meaning of Article 57(1) of the Directive created after 26th February 2015 in England, Wales or Northern Ireland
+
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
