--- a/frameworks/g-cloud-9/messages/dates.yml
+++ b/frameworks/g-cloud-9/messages/dates.yml
@@ -1,8 +1,8 @@
-clarifications_close_date: '5pm GMT, 28 March 2017'
+clarifications_close_date: '5pm BST, 28 March 2017'
 
-clarifications_publish_date: '5pm GMT, 4 April 2017'
+clarifications_publish_date: '5pm BST, 4 April 2017'
 
-framework_close_date: '5pm GMT, 11 April 2017'
+framework_close_date: '5pm BST, 11 April 2017'
 
 intention_to_award_date: '18 May 2017'
 
