--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
@@ -7,3 +7,5 @@ validations:
     name: answer_required
     message: >
       You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+      
+hidden: true
