--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -4,3 +4,5 @@ validations:
   - 
     name: answer_required
     message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
+    
+hidden: true
