--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
@@ -9,3 +9,6 @@ validations:
   - 
     name: answer_required
     message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+    
+hidden: true
+
