--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
@@ -6,3 +6,5 @@ validations:
   - 
     name: answer_required
     message: You need to answer this question because you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]].
+
+hidden: true
