"Checkbox tree", which is the same as checkboxes, but arranged in a tree structure
 - https://trello.com/c/y79rP1KA/197-suppliers-choose-a-category-backend
 - accounting for categories that appear in two places in the tree
 - allowing a restriction on the maximum number of checked items

--- a/frameworks/g-cloud-9/questions/services/serviceCategoriesHosting.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceCategoriesHosting.yml
@@ -33,3 +33,7 @@ options:
   options:
   - {label: Disk (block) storage}
   - {label: Object storage}
+number_of_items: 10
+validations:
+  - name: max_items_limit
+    message: No more than 10 categories can be selected
