updates from feedback

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -165,8 +165,7 @@
     - datacentreSecurityStandards
     - multiqPenetrationTesting
     - multiqProtectionOfDataAtRest
-    - multiqDataSanitisationHosting
-    - multiqDataSanitisationSoftware
+    - multiqDataSanitisation
     - equipmentDisposalApproach
 
 - name: Availability and resilience
