--- a/frameworks/g-cloud-9/questions/services/dataSanitisation.yml
+++ b/frameworks/g-cloud-9/questions/services/dataSanitisation.yml
@@ -1,4 +1,3 @@
-id: dataSanitisation
 name: Data sanitisation process
 question: Do you have a data sanitisation process?
 
@@ -6,6 +5,7 @@ depends:
   - "on": lot
     being:
       - cloud-hosting
+      - cloud-software
 followup:
   dataSanitisationType:
     - true
