--- a/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
+++ b/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
@@ -10,9 +10,9 @@ depends:
 type: radios
 options:
   - label: Staff screening performed with conforms to BS7858:2012
-    value: "staff_screening_to_bs7858:2012"
+    value: "staff_screening_to_bs7858_2012"
   - label: Staff screening performed but doesn’t conform with BS7858:2012
-    value: "staff_screening_not_bs7858:2012"
+    value: "staff_screening_not_bs7858_2012"
   - label: Staff screening not performed
     value: none
 
