--- a/frameworks/g-cloud-9/questions/services/standardsCSASTARLevel.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsCSASTARLevel.yml
@@ -11,15 +11,15 @@ depends:
 type: radios
 options:
   - label: "Level 1: CSA STAR Self-Assessment"
-    value: level_1
+    value: level_1_csa_star_self_assessment
   - label: "Level 2: CSA STAR Attestation"
-    value: level_2
+    value: level_2_csa_star_attestation
   - label: "Level 3: CSA STAR Certification"
-    value: level_3
+    value: level_3_csa_star_certification
   - label: "Level 4: CSA C-STAR Assessment"
-    value: level_4
+    value: level_4_csa_cstar_assessment
   - label: "Level 5: CSA STAR Continuous Monitoring"
-    value: level_5
+    value: level_5_csa_star_continuous_monitoring
 
 validations:
   - name: answer_required
