--- a/frameworks/g-cloud-9/questions/services/commandLineOS.yml
+++ b/frameworks/g-cloud-9/questions/services/commandLineOS.yml
@@ -10,7 +10,7 @@ depends:
 type: checkboxes
 options:
   - label: Linux or Unix
-    value: unix
+    value: linux_or_unix
   - label: Windows
     value: windows
   - label: macOS
