--- a/frameworks/g-cloud-9/questions/services/metricsHostingHow.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsHostingHow.yml
@@ -16,7 +16,7 @@ options:
   - label: Real-time dashboards
     value: real_time
   - label: Regular reports
-    value: regular_reporting
+    value: regular_reports
   - label: Reports on request
     value: on_request
 
