--- a/frameworks/g-cloud-9/questions/services/multiqDataSanitisation.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqDataSanitisation.yml
@@ -1,13 +1,14 @@
-id: multiqDataSanitisation
 name: Data sanitisation process
 question: Data sanitisation process
 
 depends:
   - "on": lot
     being:
+      - cloud-hosting
       - cloud-software
 
 type: multiquestion
 questions:
-  - dataSanitisationSoftware
+  - dataSanitisation
+  - dataSanitisationTypeHosting
   - dataSanitisationTypeSoftware
