--- a/frameworks/g-cloud-9/questions/services/standardsPCIWho.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsPCIWho.yml
@@ -1,6 +1,5 @@
 name: Who accredited the PCI DSS certification
 question: Who accredited you?
-hint: 10-word limit
 
 hidden: true
 depends:
@@ -10,6 +9,7 @@ depends:
       - cloud-software
 
 type: text
+max_length_in_words: 10
 
 validations:
   - name: answer_required
