--- a/frameworks/g-cloud-9/questions/services/multiqScaling.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqScaling.yml
@@ -1,12 +1,12 @@
-id: multiqScaling
 name: Scaling
 question: Scaling
 
 depends:
   - "on": lot
     being:
-      - cloud-software
+      - cloud-hosting
 
 type: multiquestion
 questions:
-  - scalingSoftwareIndependence
+  - scaling
+  - scalingType
