--- a/frameworks/g-cloud-9/questions/services/securityStaffClearances.yml
+++ b/frameworks/g-cloud-9/questions/services/securityStaffClearances.yml
@@ -1,6 +1,7 @@
 name: Security clearances
 question: What level of security cleared staff are you able to provide staff to support the service?
 
+hidden: true
 depends:
   - "on": lot
     being:
