--- a/frameworks/g-cloud-9/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-9/messages/homepage-sidebar.yml
@@ -8,7 +8,7 @@ open:
   heading: 'G&#x2011;Cloud&nbsp;9 is open for applications'
   messages:
     - 'You need an account to apply.'
-    - 'The application deadline is 5pm&nbsp;GMT, 11 April 2017.'
+    - 'The application deadline is 5pm&nbsp;BST, 11 April 2017.'
 
 pending:
   heading: 'G&#x2011;Cloud&nbsp;9 is closed for applications'
