--- a/frameworks/g-cloud-9/questions/declaration/mitigatingFactors.yml
+++ b/frameworks/g-cloud-9/questions/declaration/mitigatingFactors.yml
@@ -1,4 +1,4 @@
-name: Mitigating factors for discretionary exclusion
+name: Mitigating factors for discretionary exclusion ([[taxEvasion]] to [[misleadingInformation]])
 question: >
   If you responded ‘yes’ to any of the questions [[taxEvasion]] to [[misleadingInformation]], please provide details of
   any mitigating factors that you think should be taken into consideration.
