Various small content tweaks

--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -201,8 +201,8 @@
     - subcontracting
 -
 
-  name: Organisation’s size
-  slug: organisations-size
+  name: Organisation size
+  slug: organisation-size
   editable: True
   prefill: True
   description: |
