--- a/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
@@ -1,4 +1,4 @@
-name: Understand application process
+name: Understanding the application process
 question: >
   Do you understand the application process for G-Cloud&nbsp;9 on the Digital Marketplace?
 hint: >
