--- a/frameworks/g-cloud-9/questions/declaration/MI.yml
+++ b/frameworks/g-cloud-9/questions/declaration/MI.yml
@@ -1,5 +1,5 @@
 name: Providing management information (MI)
 question: >
-  Do you confirm that you’re prepared to provide all G-Cloud&nbsp;9-related management information (MI)
+  Do you confirm that you’re prepared to provide all the monthly G-Cloud&nbsp;9-related management information (MI)
   to CCS as outlined in the [reporting template](/suppliers/frameworks/g-cloud-9)?"
 type: boolean
