--- a/frameworks/g-cloud-9/questions/declaration/understandHowToAskQuestions.yml
+++ b/frameworks/g-cloud-9/questions/declaration/understandHowToAskQuestions.yml
@@ -1,6 +1,6 @@
 name: Asking questions
 question: >
-  Do you understand that you can ask ‘clarification’ questions on the [G-Cloud&nbsp;9 updates page](https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/g-cloud-9/updates) in your Digital Marketplace account?
+  Do you understand that you must ask ‘clarification’ questions on the [G-Cloud&nbsp;9 updates page](https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/g-cloud-9/updates) in your Digital Marketplace account?
 hint: >
   You can ask clarification questions about G-Cloud&nbsp;9 until 5pm BST 28 March 2017. All questions and answers will be posted regularly on the G-Cloud 9 updates page. You will be notified by email when new clarification questions and answers are available.
 
