Add new question - tech code of practice
with the tech code of practice

--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -119,6 +119,7 @@
     - environmentallyFriendly
     - equalityAndDiversity
     - employersInsurance
+    - helpBuyersComplyTechnologyCodesOfPractice
     - publishContracts
 -
   name: How you apply
